# Plant_Pathology_2020_FGVC7

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: main.ipynb
src/: from_tutorial.py  main.py
